[gd_scene load_steps=20 format=2]

[ext_resource path="res://AssetPacks/Sprout Lands - UI Pack - Basic pack/fonts/pixelFont-7-8x14-sproutLands.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://AssetPacks/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Sprite sheet for Basic Pack.png" type="Texture" id=2]
[ext_resource path="res://AssetPacks/Sprout Lands - Sprites - Basic pack/Objects/Basic_Plants.png" type="Texture" id=3]
[ext_resource path="res://AssetPacks/Sprout Lands - Sprites - Basic pack/Objects/Basic_tools_and_meterials.png" type="Texture" id=4]
[ext_resource path="res://Player/Shop.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )
modulate_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 869, 70, 22, 22 )

[sub_resource type="GDScript" id=15]
script/source = "extends RichTextLabel


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


func _process(delta):


	self.text = str(Game.Gold)

"

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )
region_rect = Rect2( 837, 100, 22, 24 )
modulate_color = Color( 0.247059, 0.027451, 0.027451, 1 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 2 )
region_rect = Rect2( 837, 100, 22, 24 )
modulate_color = Color( 1, 0, 0, 1 )

[sub_resource type="StreamTexture" id=17]
load_path = "res://.import/Basic_Plants.png-483d5dac39f9c30e8395945598119984.stex"

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=16]
script/source = "extends RichTextLabel



func _process(delta):

	self.text = str(Game.Gold)

"

[node name="Shop" type="Node2D"]
script = ExtResource( 5 )

[node name="Shop Buy" type="NinePatchRect" parent="."]
visible = false
margin_left = 64.0
margin_top = 23.0
margin_right = 455.0
margin_bottom = 280.0
texture = ExtResource( 2 )
region_rect = Rect2( 201, 105, 30, 30 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
__meta__ = {
"_edit_lock_": true
}

[node name="SellButton" type="Button" parent="Shop Buy"]
modulate = Color( 0.313726, 1, 0, 1 )
margin_left = 14.0
margin_top = 220.0
margin_right = 104.0
margin_bottom = 247.0
custom_colors/font_color_disabled = Color( 0.992157, 0.956863, 0.956863, 1 )
custom_colors/font_color_focus = Color( 1, 0.988235, 0.988235, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
action_mode = 0
text = "Sell"

[node name="MarginContainer3" type="MarginContainer" parent="Shop Buy/SellButton"]
visible = false
margin_left = 12.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 21.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="TitleText" type="RichTextLabel" parent="Shop Buy/SellButton/MarginContainer3"]
visible = false
modulate = Color( 0, 1, 0.227451, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 15.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Sell[/center]"
text = "Sell"

[node name="TitleBG" type="NinePatchRect" parent="Shop Buy"]
margin_left = 288.0
margin_top = 8.0
margin_right = 382.0
margin_bottom = 36.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Buy/TitleBG"]
margin_left = 14.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 20.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="TitleText" type="RichTextLabel" parent="Shop Buy/TitleBG/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 15.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Shop[/center]"
text = "Shop"

[node name="Tomato" type="NinePatchRect" parent="Shop Buy"]
margin_left = 23.0
margin_top = 48.0
margin_right = 105.0
margin_bottom = 125.0
texture = ExtResource( 2 )
region_rect = Rect2( 504, 131, 35, 41 )

[node name="TomatoText" type="NinePatchRect" parent="Shop Buy/Tomato"]
margin_left = 87.0
margin_top = 19.0
margin_right = 231.0
margin_bottom = 55.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Buy/Tomato/TomatoText"]
margin_left = 6.0
margin_top = 11.0
margin_right = 140.0
margin_bottom = 28.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="LockTomato" type="RichTextLabel" parent="Shop Buy/Tomato/TomatoText/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 17.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Unlock Tomatoes[/center]"
text = "Unlock Tomatoes"

[node name="CostUnlock1" type="NinePatchRect" parent="Shop Buy/Tomato"]
margin_left = 31.0
margin_top = 53.0
margin_right = 73.0
margin_bottom = 71.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Buy/Tomato/CostUnlock1"]
margin_left = 4.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 16.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="MoneyText" type="RichTextLabel" parent="Shop Buy/Tomato/CostUnlock1/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 36.0
margin_bottom = 14.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]10[/center]"
text = "10"

[node name="MoneyIcon2" type="NinePatchRect" parent="Shop Buy/Tomato/CostUnlock1"]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = -24.0
margin_top = -3.0
margin_right = -3.0
margin_bottom = 18.0
texture = ExtResource( 2 )
region_rect = Rect2( 805, 134, 22, 22 )

[node name="PurchaseTomato" type="TextureButton" parent="Shop Buy/Tomato"]
modulate = Color( 0.345098, 0.568627, 1, 1 )
margin_left = 235.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 50.0
action_mode = 0
texture_normal = SubResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="Shop Buy/Tomato"]
margin_left = 19.0
margin_right = 57.0
margin_bottom = 32.0
texture = ExtResource( 2 )
region_rect = Rect2( 201, 57, 30, 30 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Shop Buy/Tomato"]
margin_left = 30.0
margin_top = 8.0
margin_right = 46.0
margin_bottom = 25.0
texture = ExtResource( 3 )
region_rect = Rect2( 2, 18, 12, 13 )

[node name="Axe" type="NinePatchRect" parent="Shop Buy"]
margin_left = 24.0
margin_top = 134.0
margin_right = 106.0
margin_bottom = 211.0
texture = ExtResource( 2 )
region_rect = Rect2( 504, 131, 35, 41 )

[node name="AxeText" type="NinePatchRect" parent="Shop Buy/Axe"]
margin_left = 87.0
margin_top = 19.0
margin_right = 231.0
margin_bottom = 55.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Buy/Axe/AxeText"]
margin_left = 6.0
margin_top = 11.0
margin_right = 140.0
margin_bottom = 28.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="TitleText" type="RichTextLabel" parent="Shop Buy/Axe/AxeText/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 17.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Unlock Axe[/center]"
text = "Unlock Axe"

[node name="CostUnlock1" type="NinePatchRect" parent="Shop Buy/Axe"]
margin_left = 31.0
margin_top = 53.0
margin_right = 73.0
margin_bottom = 71.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Buy/Axe/CostUnlock1"]
margin_left = 4.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 16.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="MoneyText" type="RichTextLabel" parent="Shop Buy/Axe/CostUnlock1/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 36.0
margin_bottom = 14.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]10[/center]"
text = "10"

[node name="MoneyIcon2" type="NinePatchRect" parent="Shop Buy/Axe/CostUnlock1"]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = -24.0
margin_top = -3.0
margin_right = -3.0
margin_bottom = 18.0
texture = ExtResource( 2 )
region_rect = Rect2( 805, 134, 22, 22 )

[node name="PurchaseAxe" type="TextureButton" parent="Shop Buy/Axe"]
modulate = Color( 0.345098, 0.568627, 1, 1 )
margin_left = 235.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 50.0
action_mode = 0
texture_normal = SubResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="Shop Buy/Axe"]
margin_left = 19.0
margin_right = 57.0
margin_bottom = 32.0
texture = ExtResource( 2 )
region_rect = Rect2( 201, 57, 30, 30 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Shop Buy/Axe"]
margin_left = 30.0
margin_top = 8.0
margin_right = 46.0
margin_bottom = 25.0
texture = ExtResource( 4 )
region_rect = Rect2( 17, 0, 14, 16 )

[node name="GoldCount" type="NinePatchRect" parent="Shop Buy"]
margin_left = 285.0
margin_top = 224.0
margin_right = 358.0
margin_bottom = 245.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Buy/GoldCount"]
margin_left = 11.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 19.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="MoneyText" type="RichTextLabel" parent="Shop Buy/GoldCount/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 14.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]120[/center]"
text = "120"
script = SubResource( 15 )

[node name="MoneyIcon" type="NinePatchRect" parent="Shop Buy/GoldCount"]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = 74.0
margin_top = -1.0
margin_right = 96.0
margin_bottom = 21.0
texture = ExtResource( 2 )
region_rect = Rect2( 805, 134, 22, 22 )

[node name="BuyExit" type="Button" parent="Shop Buy"]
margin_left = 11.0
margin_top = 10.0
margin_right = 37.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 13 )

[node name="Shop Sell" type="NinePatchRect" parent="."]
margin_left = 64.0
margin_top = 23.0
margin_right = 455.0
margin_bottom = 280.0
texture = ExtResource( 2 )
region_rect = Rect2( 201, 105, 30, 30 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CornContainer" type="NinePatchRect" parent="Shop Sell"]
margin_left = 32.0
margin_top = 51.0
margin_right = 70.0
margin_bottom = 83.0
texture = ExtResource( 2 )
region_rect = Rect2( 201, 57, 30, 30 )

[node name="CornIcon" type="NinePatchRect" parent="Shop Sell/CornContainer"]
margin_left = 11.0
margin_top = 7.0
margin_right = 29.0
margin_bottom = 25.0
texture = SubResource( 17 )
region_rect = Rect2( 80, 0, 16, 16 )

[node name="CostUnlock1" type="NinePatchRect" parent="Shop Sell/CornContainer"]
margin_left = 69.0
margin_top = 36.0
margin_right = 111.0
margin_bottom = 54.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Sell/CornContainer/CostUnlock1"]
margin_left = 4.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 16.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="MoneyText" type="RichTextLabel" parent="Shop Sell/CornContainer/CostUnlock1/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 36.0
margin_bottom = 14.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]1[/center]"
text = "1"

[node name="MoneyIcon2" type="NinePatchRect" parent="Shop Sell/CornContainer/CostUnlock1"]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = -24.0
margin_top = -3.0
margin_right = -3.0
margin_bottom = 18.0
texture = ExtResource( 2 )
region_rect = Rect2( 805, 134, 22, 22 )

[node name="SellTitle1" type="NinePatchRect" parent="Shop Sell/CornContainer"]
margin_left = 44.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 26.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Sell/CornContainer/SellTitle1"]
margin_left = 4.0
margin_top = 5.0
margin_right = 91.0
margin_bottom = 20.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="SellPrice1" type="RichTextLabel" parent="Shop Sell/CornContainer/SellTitle1/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 86.0
margin_bottom = 15.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Sell Price[/center]"
text = "Sell Price"

[node name="SellButton1" type="Button" parent="Shop Sell/CornContainer"]
modulate = Color( 0.733333, 0.0509804, 0.811765, 1 )
margin_left = 52.0
margin_top = 62.0
margin_right = 113.0
margin_bottom = 88.0
custom_colors/font_color_disabled = Color( 0.992157, 0.956863, 0.956863, 1 )
custom_colors/font_color_focus = Color( 1, 0.988235, 0.988235, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
action_mode = 0
text = "Sell 1"

[node name="TtoeContainer2" type="NinePatchRect" parent="Shop Sell"]
margin_left = 191.0
margin_top = 51.0
margin_right = 229.0
margin_bottom = 83.0
texture = ExtResource( 2 )
region_rect = Rect2( 201, 57, 30, 30 )

[node name="TtoeIcon" type="NinePatchRect" parent="Shop Sell/TtoeContainer2"]
margin_left = 10.0
margin_top = 7.0
margin_right = 28.0
margin_bottom = 25.0
texture = ExtResource( 3 )
region_rect = Rect2( 80, 16, 16, 16 )

[node name="CostUnlock1" type="NinePatchRect" parent="Shop Sell/TtoeContainer2"]
margin_left = 69.0
margin_top = 36.0
margin_right = 111.0
margin_bottom = 54.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Sell/TtoeContainer2/CostUnlock1"]
margin_left = 4.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 16.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="MoneyText" type="RichTextLabel" parent="Shop Sell/TtoeContainer2/CostUnlock1/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 36.0
margin_bottom = 14.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]3[/center]"
text = "3"

[node name="MoneyIcon2" type="NinePatchRect" parent="Shop Sell/TtoeContainer2/CostUnlock1"]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = -24.0
margin_top = -3.0
margin_right = -3.0
margin_bottom = 18.0
texture = ExtResource( 2 )
region_rect = Rect2( 805, 134, 22, 22 )

[node name="SellTitle1" type="NinePatchRect" parent="Shop Sell/TtoeContainer2"]
margin_left = 44.0
margin_top = 2.0
margin_right = 138.0
margin_bottom = 26.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Sell/TtoeContainer2/SellTitle1"]
margin_left = 4.0
margin_top = 5.0
margin_right = 91.0
margin_bottom = 20.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="SellPrice1" type="RichTextLabel" parent="Shop Sell/TtoeContainer2/SellTitle1/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 86.0
margin_bottom = 15.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Sell Price[/center]"
text = "Sell Price"

[node name="SellTtoe" type="Button" parent="Shop Sell/TtoeContainer2"]
modulate = Color( 0.733333, 0.0509804, 0.811765, 1 )
margin_left = 52.0
margin_top = 62.0
margin_right = 113.0
margin_bottom = 88.0
custom_colors/font_color_disabled = Color( 0.992157, 0.956863, 0.956863, 1 )
custom_colors/font_color_focus = Color( 1, 0.988235, 0.988235, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
action_mode = 0
text = "Sell 1"

[node name="BuyButton" type="Button" parent="Shop Sell"]
modulate = Color( 0.313726, 1, 0, 1 )
margin_left = 14.0
margin_top = 220.0
margin_right = 104.0
margin_bottom = 247.0
custom_colors/font_color_disabled = Color( 0.992157, 0.956863, 0.956863, 1 )
custom_colors/font_color_focus = Color( 1, 0.988235, 0.988235, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
action_mode = 0
text = "Buy"

[node name="MarginContainer3" type="MarginContainer" parent="Shop Sell/BuyButton"]
visible = false
margin_left = 12.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 21.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="TitleText" type="RichTextLabel" parent="Shop Sell/BuyButton/MarginContainer3"]
visible = false
modulate = Color( 0, 1, 0.227451, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 15.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Sell[/center]"
text = "Sell"

[node name="TitleBG" type="NinePatchRect" parent="Shop Sell"]
margin_left = 288.0
margin_top = 8.0
margin_right = 382.0
margin_bottom = 36.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Sell/TitleBG"]
margin_left = 14.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 20.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="TitleText" type="RichTextLabel" parent="Shop Sell/TitleBG/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 15.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Shop[/center]"
text = "Shop"

[node name="GoldCount" type="NinePatchRect" parent="Shop Sell"]
margin_left = 285.0
margin_top = 224.0
margin_right = 358.0
margin_bottom = 245.0
texture = ExtResource( 2 )
region_rect = Rect2( 259, 180, 90, 25 )

[node name="MarginContainer" type="MarginContainer" parent="Shop Sell/GoldCount"]
margin_left = 11.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 19.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 0

[node name="MoneyText" type="RichTextLabel" parent="Shop Sell/GoldCount/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 14.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]120[/center]"
text = "120"
script = SubResource( 16 )

[node name="MoneyIcon" type="NinePatchRect" parent="Shop Sell/GoldCount"]
modulate = Color( 0.0784314, 1, 0, 1 )
margin_left = 74.0
margin_top = -1.0
margin_right = 96.0
margin_bottom = 21.0
texture = ExtResource( 2 )
region_rect = Rect2( 805, 134, 22, 22 )

[node name="SellExit" type="Button" parent="Shop Sell"]
margin_left = 11.0
margin_top = 10.0
margin_right = 37.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 13 )

[connection signal="pressed" from="Shop Buy/SellButton" to="." method="_on_SellButton_pressed"]
[connection signal="pressed" from="Shop Buy/Tomato/PurchaseTomato" to="." method="_on_PurchaseTomato_pressed"]
[connection signal="pressed" from="Shop Buy/BuyExit" to="." method="_on_BuyExit_pressed"]
[connection signal="pressed" from="Shop Sell/CornContainer/SellButton1" to="." method="_on_SellButton1_pressed"]
[connection signal="pressed" from="Shop Sell/TtoeContainer2/SellTtoe" to="." method="_on_SellTtoe_pressed"]
[connection signal="pressed" from="Shop Sell/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="Shop Sell/SellExit" to="." method="_on_SellExit_pressed"]
